# GRUB-Friendly-Starting-up-System

./: LICENSE  README.md  README_en.md
Firmware/ESP32_S3_Mesh/: CMakeLists.txt
Firmware/ESP32_S3_Mesh/components/: CMakeLists.txt  LVGL_UI.c  LVGL_UI.h  ble_client.c  ble_client.h
Firmware/ESP32_S3_Mesh/components/Fonts/: ka1.c
Firmware/ESP32_S3_Mesh/components/Icons/: computer.c  connection.c  linux_button.c  power_button.c  settings.c
Firmware/ESP32_S3_Mesh/main/: idf_component.yml  main.c
Firmware/GRUB_Key/: .cproject  .project  .projectlinkstore  GRUB_Key.pintool  GRUB_Key.slcp  GRUB_Key.slps  app.c
Firmware/GRUB_Key/.pdm/: uc.module.setup.componentSetup.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.ucConfig.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.ucTemplate.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj
Firmware/GRUB_Key/.uceditor/: .GRUB_Key.bootloader_interface.cedit  .GRUB_Key.device_init_lfrco.cedit
Firmware/GRUB_Key/GNU ARM v12.2.1 - Default/: GRUB_Key.axf  GRUB_Key.hex  GRUB_Key.map  GRUB_Key.out  GRUB_Key.s37  app.d  main.d  makefile  objects.mk  sources.mk  subdir.mk
Firmware/GRUB_Key/autogen/: gatt_db.c  gatt_db.h  sl_component_catalog.h  sl_event_handler.c
Hardware/PCB/: Esp32_开机网关.eprj2
Web/: index.html  package.json  server.js
(+149 files in other folders)
